--- a/index.html
+++ b/index.html
@@ -56,19 +56,12 @@ h2 {
   scroll-margin-top: 120px;
 }
 
-.header-inner {
-  max-width: 1100px;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 /* ===== ロゴ全体（共通） ===== */
 .logo {
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-right: 40px;
 }
 
 /* ロゴ画像 */
@@ -78,16 +71,21 @@ h2 {
   width: auto;
 }
 
-/* ===== スマホだけ並びを逆にする ===== */
-@media (max-width: 480px) {
-  .logo {
-    flex-direction: row-reverse; /* ← ここがポイント */
-    gap: 6px;
-  }
+.header-inner {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
 
-  .logo-img {
-    width: 34px; /* スマホ用に少し小さく */
-  }
+.header-center {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
 }
 
 /* ロゴ・メニュー文字共通 */
@@ -146,17 +144,11 @@ h2 {
     height: 80px;
   }
 
-  .header-inner {
-    padding: 0 16px;       /* 左右余白はここ */
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
   /* ロゴ＋補足文 */
   .logo {
     display: flex;
     align-items: center;
+    flex-direction: row-reverse;
     gap: 6px;
   }
 
@@ -164,6 +156,13 @@ h2 {
   .logo-img {
     height: 48px;
     width: auto;
+  }
+  
+  .header-inner {
+    padding: 0 16px;       /* 左右余白はここ */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   /* 中央タイトル */
