--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ h2 {
 .header-inner {
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0 24px;
+  padding-left: 60px;
+  padding-right: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
