--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@ h2 {
 .header-inner {
   max-width: 1100px;
   margin: 0 auto;
-  padding-left: 100px; /* ← 全体を右に */
+  padding-left: 20px;
   padding-right: 20px;
 
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
-/* 中央タイトル：absolute をやめる */
+/* 中央タイトル　*/
 .header-center {
   position: static;      /* ← 重要 */
   transform: none;       /* ← 消す */
