--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ h2 {
   display: flex;
   align-items: center;
   gap: 10px;
-  margin-right: 40px;
+  margin-right: 10px;
 }
 
 /* ロゴ画像 */
@@ -74,7 +74,7 @@ h2 {
 .header-inner {
   max-width: 1100px;
   margin: 0 auto;
-  padding-left: 20px;
+  padding-left: 0;
   padding-right: 20px;
 
   display: flex;
@@ -93,6 +93,7 @@ h2 {
   text-shadow: 0 2px 6px rgba(0,0,0,0.35);
   white-space: nowrap;
   font-size: clamp(1.1rem, 3vw, 1.8rem);
+  margin-left: 20px;
 }
 
 /* ロゴ・メニュー文字共通 */
