--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ h2 {
   white-space: nowrap;
   font-size: clamp(1.1rem, 3vw, 1.8rem);
   margin-left: 20px;
+  margin-right: 60px;
 }
 
 /* ロゴ・メニュー文字共通 */
