--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ h2 {
   font-size: clamp(1.1rem, 3vw, 1.8rem);
   margin-left: 20px;
   margin-right: 60px;
+  left: -40px;
 }
 
 /* ロゴ・メニュー文字共通 */
