--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@ body {
 ================================================= */
 header {
   background-color: rgba(169,169,169,0.5);
-  padding: 12px 0;
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -52,8 +51,41 @@ header {
   width: 100%;
 }
 
-h2 {
-  scroll-margin-top: 120px;
+/* ===== ヘッダー中身 ===== */
+.header-inner {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding-left: 100px;   /* 全体位置調整（ここで左右を決める） */
+  padding-right: 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* ===== ロゴ ===== */
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.logo-img {
+  max-height: 60px;   /* ヘッダー80px内に収まる */
+  width: auto;
+}
+
+/* ===== 中央タイトル ===== */
+.header-center {
+  position: relative;
+  left: -40px;        /* ← 発達支援ノワールを左へ（数値調整OK） */
+
+  font-weight: bold;
+  color: #675340;
+  letter-spacing: 0.15em;
+  text-shadow: 0 2px 6px rgba(0,0,0,0.35);
+  white-space: nowrap;
+  font-size: clamp(1.1rem, 3vw, 1.8rem);
 }
 
 /* ===== ロゴ全体（共通） ===== */
