--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@ header {
 .header-inner {
   max-width: 1100px;
   margin: 0 auto;
-  padding-left: 100px;   /* 全体位置調整（ここで左右を決める） */
+  padding-left: 100px;   /* 全体の左右位置調整 */
   padding-right: 20px;
 
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; /* 左：ロゴ＋タイトル / 右：メニュー */
 }
 
 /* ===== ロゴ ===== */
@@ -69,6 +69,7 @@ header {
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-right: 10px;
 }
 
 .logo-img {
@@ -76,79 +77,16 @@ header {
   width: auto;
 }
 
-/* ===== 中央タイトル ===== */
+/* ===== 中央タイトル（発達支援ノワール） ===== */
 .header-center {
   position: relative;
-  left: -40px;        /* ← 発達支援ノワールを左へ（数値調整OK） */
+  left: -40px;        /* タイトルだけ左へ（ここだけ調整） */
 
   font-weight: bold;
   color: #675340;
   letter-spacing: 0.15em;
   text-shadow: 0 2px 6px rgba(0,0,0,0.35);
   white-space: nowrap;
-  font-size: clamp(1.1rem, 3vw, 1.8rem);
-}
-
-/* ===== ロゴ全体（共通） ===== */
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-right: 10px;
-}
-
-/* ロゴ画像 */
-.logo-img {
-  height: 100%;
-  max-height: 100px;
-  width: auto;
-}
-
-.header-inner {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding-left: 0;
-  padding-right: 20px;
-
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-/* 中央タイトル　*/
-.header-center {
-  position: static;      /* ← 重要 */
-  transform: none;       /* ← 消す */
-  text-align: center;
-  font-weight: bold;
-  color: #675340;
-  letter-spacing: 0.15em;
-  text-shadow: 0 2px 6px rgba(0,0,0,0.35);
-  white-space: nowrap;
-  font-size: clamp(1.1rem, 3vw, 1.8rem);
-  margin-left: 20px;
-  margin-right: 60px;
-  left: -60px;
-}
-
-/* ロゴ・メニュー文字共通 */
-.logo,
-.menu a {
-  color: #fff;
-  font-size: clamp(0.7rem, 2vw, 1rem);
-  white-space: nowrap;
-  text-decoration: none;
-}
-
-/* 中央タイトル */
-.header-center {
-  text-align: center;
-  font-weight: bold;
-  color: #675340;
-  letter-spacing: 0.15em;
-  text-shadow: 0 2px 6px rgba(0,0,0,0.35);
-  white-space: nowrap;
-
   font-size: clamp(1.1rem, 3vw, 1.8rem);
 }
 
