--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@ header {
 .header-inner {
   max-width: 1100px;
   margin: 0 auto;
-  padding-left: 0;
   padding-right: 20px;
 
   display: flex;
@@ -74,12 +73,18 @@ header {
   width: auto;
 }
 
+.logo-text {
+  color: #fff;
+  font-size: clamp(0.9rem, 2vw, 1.2rem);
+  white-space: nowrap;
+}  
+
 .header-center {
   position: static;
   transform: none;
   text-align: center;
   font-weight: bold;
-  color: #fff; /* ← 白に変更 */
+  color: #675340;
   letter-spacing: 0.15em;
   text-shadow: 0 2px 6px rgba(0,0,0,0.35);
   white-space: nowrap;
@@ -986,7 +991,7 @@ main {
   <a href="#price">ご利用料金</a>
   <a href="#access">アクセス</a>
   <a href="#" id="contact-link">お問い合わせ</a>
-  <a href="#pdf">自己評価</a>
+  <!--2025年度は非表示 <a href="#pdf">自己評価</a> -->
   <a href="https://www.instagram.com/noir_niigata/" target="_blank" class="insta-link">
     Instagram
   </a>
