--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ header {
   max-width: 1100px;
   margin: 0 auto;
   padding-right: 20px;
-
+　padding: 20px 20px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
