--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@ header {
 .header-inner {
   max-width: 1100px;
   margin: 0 auto;
-　padding: 20px 20px;
+　padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 0;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -69,7 +72,7 @@ header {
 }
 
 .logo-img {
-  max-height: 80px;
+  max-height: 100px;
   width: auto;
 }
 
