--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ header {
   align-items: center;
   justify-content: flex-start;
   height: 100px;
+  left: -40px;
 }
 
 .logo {
@@ -72,8 +73,9 @@ header {
 }
 
 .logo-img {
-  max-height: 100px;
+  max-height: 80px;
   width: auto;
+  
 }
 
 .logo-text {
