--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@ header {
   display: flex;
   align-items: center;
   justify-content: flex-start; /* 左寄せ */
-  height: 100px;
+  height: 100%x;
 }
 
 /* ===== ロゴ ===== */
 .logo {
   display: flex;
   align-items: center;
-  gap: 20px; /* ロゴマークとロゴテキストの間隔 */
+  gap: 30px; /* ロゴマークとロゴテキストの間隔 */
   margin-right: 10px;
 }
 
 .logo-img {
   max-height: 80px;
   width: auto;
-  margin-left: -70px; /* 左端寄せ用 */
+  margin-left: -80px; /* 左端寄せ用 */
 }
 
 .logo-text {
@@ -93,7 +93,7 @@ header {
   text-shadow: 0 2px 6px rgba(0,0,0,0.35);
   white-space: nowrap;
   font-size: clamp(1.1rem, 3vw, 1.8rem);
-  margin-left: 40px;  /* ロゴテキストとの間隔 */
+  margin-left: 30px;  /* ロゴテキストとの間隔 */
   margin-right: 100px; /* 右側の余白 */
 }
   
