--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ header {
 .logo-img {
   max-height: 80px;
   width: auto;
-  margin-left: -80px; /* 左端寄せ用 */
+  margin-left: -120px; /* 左端寄せ用 */
 }
 
 .logo-text {
@@ -94,7 +94,7 @@ header {
   white-space: nowrap;
   font-size: clamp(1.1rem, 3vw, 1.8rem);
   margin-left: 30px;  /* ロゴテキストとの間隔 */
-  margin-right: 100px; /* 右側の余白 */
+  margin-right: 130px; /* 右側の余白 */
 }
   
 /* ================= メニュー（PC） ================= */
@@ -835,7 +835,13 @@ footer .zip {
   line-height: 1.3;
 }
 
-.footer-tel, .footer-mail {
+.footer-tel {
+  font-size: 1em;
+  display: inline-block;
+  margin-right: 20px; /* メールとの間隔 */
+}
+
+.footer-mail {
   font-size: 1em;
   display: inline-block;
 }
