--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@ header {
 .header-inner {
   max-width: 1100px;
   margin: 0 auto;
-  padding: 20px 0 20px 0; /* 上下20px、左右0で左端に寄せる */
+  padding: 0 30px;   /* 左右30pxで距離を統一 */
   display: flex;
   align-items: center;
-  justify-content: flex-start;
 }
 
 .logo {
@@ -69,7 +68,6 @@ header {
 .logo-img {
   max-height: 80px;
   width: auto;
-  margin-left: 0; /* 左端に揃える */
 }
 
 .logo-text {
@@ -90,12 +88,12 @@ header {
   font-size: clamp(1.1rem, 3vw, 1.8rem);
   margin-left: 30px;  /* ロゴテキストとの間隔 */
 }
-  
+
 /* ================= メニュー（PC） ================= */
 .menu {
   display: flex;
   gap: 20px;
-  justify-content: flex-end;
+  margin-left: auto;  /* 左側を自動で詰めて右端寄せ */
 }
 
 .menu a {
