--- a/index.html
+++ b/index.html
@@ -54,15 +54,18 @@ header {
 .header-inner {
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0 30px;   /* 左右30pxで距離を統一 */
+  padding: 0 30px;       /* 左右の距離を揃える */
   display: flex;
-  align-items: center;
+  align-items: center;   /* 上下中央揃え */
+  justify-content: flex-start;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .logo {
   display: flex;
   align-items: center;
-  gap: 30px; /* ロゴマークとテキストの間隔 */
+  gap: 30px;
 }
 
 .logo-img {
@@ -77,9 +80,6 @@ header {
 }
 
 .header-center {
-  position: static;
-  transform: none;
-  text-align: center;
   font-weight: bold;
   color: #675340;
   letter-spacing: 0.15em;
@@ -93,7 +93,7 @@ header {
 .menu {
   display: flex;
   gap: 20px;
-  margin-left: auto;  /* 左側を自動で詰めて右端寄せ */
+  margin-left: auto;    /* 右端に寄せる */
 }
 
 .menu a {
