--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@ header {
 
 .header-inner {
   max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 30px;       /* 左右の距離を揃える */
+  margin: 0 auto;           /* 左右均等に中央寄せ */
   display: flex;
-  align-items: center;   /* 上下中央揃え */
-  justify-content: flex-start;
+  align-items: center;       /* 上下中央揃え */
+  justify-content: space-between; /* 左右端に要素を配置 */
   height: 100%;
+  padding: 0 30px;           /* 左右端からの距離を統一 */
   box-sizing: border-box;
 }
 
 .logo {
   display: flex;
   align-items: center;
-  gap: 30px;
+  gap: 30px;                 /* ロゴマークとテキスト間隔 */
 }
 
 .logo-img {
@@ -86,14 +86,11 @@ header {
   text-shadow: 0 2px 6px rgba(0,0,0,0.35);
   white-space: nowrap;
   font-size: clamp(1.1rem, 3vw, 1.8rem);
-  margin-left: 30px;  /* ロゴテキストとの間隔 */
 }
 
-/* ================= メニュー（PC） ================= */
 .menu {
   display: flex;
   gap: 20px;
-  margin-left: auto;    /* 右端に寄せる */
 }
 
 .menu a {
