--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ header {
 }
 
 .header-inner {
-  max-width: 1100px;
+ max-width: 1100px;
   margin: 0 auto;
   padding: 20px; /* 上下左右同じ */
   display: flex;
@@ -66,6 +66,17 @@ header {
   gap: 30px; /* ロゴとテキスト間 */
 }
 
+.logo-img {
+  max-height: 80px;
+  width: auto;
+}
+
+.logo-text {
+  color: #fff;
+  font-size: clamp(0.9rem, 2vw, 1.2rem);
+  white-space: nowrap;
+}
+
 .header-center {
   font-weight: bold;
   color: #675340;
@@ -76,7 +87,6 @@ header {
   margin-left: 30px; /* ロゴテキストとの間隔 */
 }
 
-/* メニューを右端に */
 .menu {
   display: flex;
   gap: 20px;
