--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ header {
 .header-inner {
  max-width: 1100px;
   margin: 0 auto;
-  padding: 20px; /* 上下左右同じ */
+  padding: 20px 20px 20px 10px; /* ← 左だけ10pxに */
   display: flex;
   align-items: center;
   justify-content: flex-start; /* 左寄せ */
