--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ header {
 
 .header-inner {
  max-width: 1100px;
-  margin: 0 auto;
+  margin: 0 auto 0 0;
   padding: 20px 20px 20px 10px; /* ← 左だけ10pxに */
   display: flex;
   align-items: center;
