--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ header {
 .header-inner {
  max-width: 1100px;
   margin: 0 auto 0 0;
-  padding: 30px 20px 20px 30px; /* ← 左だけ10pxに */
+  padding: 20px 20px 30px 30px; /* ← 上 下 右 左 */
   display: flex;
   align-items: center;
   justify-content: flex-start; /* 左寄せ */
@@ -90,8 +90,8 @@ header {
 .menu {
   display: flex;
   gap: 20px;
-  margin-left: auto;
-  margin-right: 20px;
+  margin-right: auto;
+  margin-left: 20px;
 }
   
 .menu a {
