--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@ header {
 .menu {
   display: flex;
   gap: 20px;
-  margin-right: auto;
-  margin-left: 20px;
+  margin-left: auto;
+  position: relative;
+  right: 20px;  
 }
   
 .menu a {
