--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@ header {
 .menu {
   display: flex;
   gap: 20px;
-  margin-left: auto;
-  position: relative;
-  right: 20px;  
+  margin-left: 40px;
 }
   
 .menu a {
