--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ header {
   padding: 20px 20px 30px 30px; /* ← 上 下 右 左 */
   display: flex;
   align-items: center;
-  justify-content: flex-start; /* 左寄せ */
+  justify-content: center;
 }
 
 .logo {
