--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ header {
 
 .header-inner {
  max-width: 1100px;
-  margin: 0 auto 0 0;
-  padding: 20px 20px 30px 30px; /* ← 上 下 右 左 */
+  margin: 0 auto;
+  padding: 20px 0; /* ← 上下 右左 */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -90,7 +90,7 @@ header {
 .menu {
   display: flex;
   gap: 20px;
-  margin-left: 40px;
+  margin-left: auto;
 }
   
 .menu a {
