--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ header {
 .header-inner {
  max-width: 1100px;
   margin: 0 auto;
-  padding: 20px 0; /* ← 上下 右左 */
+  padding: 20px 5px; /* ← 上下 右左 */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -85,6 +85,7 @@ header {
   white-space: nowrap;
   font-size: clamp(1.1rem, 3vw, 1.8rem);
   margin-left: 30px; /* ロゴテキストとの間隔 */
+  margin-right: 50px;
 }
 
 .menu {
