--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
   inset: 0;
   background: url("がぞー.png") center / cover no-repeat;
   z-index: -1;
-  opacity: 0.5;
+  opacity: 0.35;
 }
 
 /* =================================================
@@ -193,6 +193,23 @@ header {
     color: #fff;
     text-decoration: none;
   }
+}
+
+/* ===============================
+   スライダー上キャッチコピー
+=============================== */
+.slider-catch-out {
+  max-width: 920px;
+  margin: 20px auto 10px;
+  padding: 0 10px;
+
+  text-align: center;
+  font-weight: bold;
+  color: #675340;
+  letter-spacing: 0.08em;
+  line-height: 1.6;
+
+  font-size: clamp(1.1rem, 2.5vw, 1.6rem);
 }
   
 /* ===============================
@@ -1000,6 +1017,10 @@ main {
   </div>
  </header>
 <main>
+
+<p class="slider-catch-out pc-only">
+  ノワールでは　専門的な視点から お子様の特性に合わせた療育を行っています
+</p>
 
 <!-- ===== PC用スライダー ===== -->
 <div class="slider-section pc-only">
