--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@ html {
 }
 
 body {
-  font-family: 'Kiwi Maru', cursive;
+  font-family:
+    "Kiwi Maru",
+    "Hiragino Maru Gothic ProN",
+    "Yu Gothic UI",
+    sans-serif;
   background-color: #fff;
   color: #9F987D;
   margin: 0;
@@ -34,9 +38,13 @@ body {
 .background-image {
   position: fixed;
   inset: 0;
-  background: url("がぞー.png") center / cover no-repeat;
+  background:
+    linear-gradient(
+      rgba(0,0,0,0.25),
+      rgba(0,0,0,0.25)
+    ),
+    url("がぞー.png") center / cover no-repeat;
   z-index: -1;
-  opacity: 0.35;
 }
 
 /* =================================================
@@ -204,12 +212,16 @@ header {
   padding: 0 10px;
 
   text-align: center;
-  font-weight: bold;
   color: #675340;
-  letter-spacing: 0.08em;
   line-height: 1.6;
 
-  font-size: clamp(1.1rem, 2.5vw, 1.6rem);
+  font-size: clamp(1rem, 2vw, 1.4rem);
+  white-space: nowrap;
+  font-family:
+  "Noto Serif JP",
+  "Hiragino Mincho ProN",
+  "Yu Mincho",
+  serif;
 }
   
 /* ===============================
@@ -222,7 +234,6 @@ header {
   text-align: center;
   font-size: 1.6em;
   font-weight: 300;
-  font-family: 'Kiwi Maru', cursive;
   color: #8b8484;
 
   position: relative;
@@ -454,7 +465,11 @@ header {
     color: #9F987D;
     cursor: pointer;
 
-    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-family:
+     "M PLUS Rounded 1c",
+     "Hiragino Kaku Gothic ProN",
+     "Yu Gothic",
+     sans-serif;
   }
 
   /* ご利用の流れ → 下を少し詰める */
@@ -681,7 +696,11 @@ header {
   color: #9F987D;
   cursor: pointer;
 
-  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-family:
+    "M PLUS Rounded 1c",
+    "Hiragino Kaku Gothic ProN",
+    "Yu Gothic",
+    sans-serif;
 }
 
 /* 矢印 */
@@ -809,7 +828,11 @@ footer {
   background: rgba(255,255,255,0.5);
   padding: 20px 0;
   text-align: center;
-  font-family: 'Kiwi Maru', cursive;
+  font-family:
+    "Noto Serif JP",
+    "Hiragino Mincho ProN",
+    "Yu Mincho",
+    serif;
   font-size: 1em;
   color: #aaa;
   margin: 0;
