--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ body {
   inset: 0;
   background:
     linear-gradient(
-      rgba(0,0,0,0.25),
-      rgba(0,0,0,0.25)
+      rgba(0,0,0,0.15),
+      rgba(0,0,0,0.15)
     ),
     url("がぞー.png") center / cover no-repeat;
   z-index: -1;
@@ -212,7 +212,7 @@ header {
   padding: 0 10px;
 
   text-align: center;
-  color: #675340;
+  color: #fff;
   line-height: 1.6;
 
   font-size: clamp(1rem, 2vw, 1.4rem);
@@ -1042,7 +1042,7 @@ main {
 <main>
 
 <p class="slider-catch-out pc-only">
-  ノワールでは　専門的な視点から お子様の特性に合わせた療育を行っています
+  ノワールでは 専門的な視点から お子様の特性に合わせた療育を行っています。
 </p>
 
 <!-- ===== PC用スライダー ===== -->
