--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ header {
   font-weight: bold;
   color: #675340;
   letter-spacing: 0.15em;
-  text-shadow: 0 2px 6px rgba(0,0,0,0.35);
+  text-shadow: 0 2px 6px rgba(255,255,255,0.35);
   white-space: nowrap;
   font-size: clamp(1.1rem, 3vw, 1.8rem);
   margin-left: 30px; /* ロゴテキストとの間隔 */
@@ -212,7 +212,7 @@ header {
   padding: 0 10px;
 
   text-align: center;
-  color: #fff;
+  color: #675340;
   line-height: 1.6;
 
   font-size: clamp(1rem, 2vw, 1.4rem);
@@ -234,7 +234,7 @@ header {
   text-align: center;
   font-size: 1.6em;
   font-weight: 300;
-  color: #8b8484;
+  color: #fff;
 
   position: relative;
   display: block;
@@ -248,7 +248,7 @@ header {
   width: 65%;
   height: 0.8em;
 
-  background: rgba(169,169,169,0.25);
+  background: rgba(169,169,169,0.4);
 
   border-radius: 0 15px 15px 0;
   z-index: 0;
