--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
     "Yu Gothic UI",
     sans-serif;
   background-color: #fff;
-  color: #9F987D;
+  color: #675340; /*こげベージュ→9F987D:*/
   margin: 0;
 
   min-height: 100vh;
@@ -248,10 +248,10 @@ header {
   width: 65%;
   height: 0.8em;
 
-  background: rgba(169,169,169,0.4);
+  background: rgba(169,169,169,0.8);
 
   border-radius: 0 15px 15px 0;
-  z-index: 0;
+  z-index: -1;
 }
 
 @media (max-width: 1100px) {
