--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ header {
   width: 65%;
   height: 0.8em;
 
-  background: rgba(169,169,169,0.8);
+  background: rgba(169,169,169,0.7);
 
   border-radius: 0 15px 15px 0;
   z-index: -1;
@@ -834,13 +834,13 @@ footer {
     "Yu Mincho",
     serif;
   font-size: 1em;
-  color: #aaa;
+  color: #9F987D;
   margin: 0;
 }
 
 /* 住所・TEL・MAIL */
 footer .zip {
-  color: #aaa;
+  color: #9F987D;
 }
   
 .footer-address {
@@ -879,7 +879,7 @@ footer .zip {
 /* コピーライト */
 .footer-copy {
   font-size: 1em;
-  color: #aaa;
+  color: #9F987D;
   line-height: 1.6;
 }
 
@@ -896,12 +896,12 @@ footer .zip {
   position: absolute;
   white-space: nowrap;
   text-decoration: none;
-  color: #aaa;
+  color: #9F987D;
   font-size: 0.9rem;
 }
 
 .footer-links a:hover {
-  color: #9F987D;
+  color: #8F886E;
   text-decoration: underline;
 }
 
@@ -910,7 +910,7 @@ footer .zip {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  color: #aaa;
+  color: #9F987D;
   user-select: none;
 }
 
