--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ header {
   font-weight: bold;
   color: #675340;
   letter-spacing: 0.15em;
-  text-shadow: 0 2px 6px rgba(255,255,255,0.6);
+  text-shadow: 0 2px 6px rgba(255,255,255,0.8);
   white-space: nowrap;
   font-size: clamp(1.1rem, 3vw, 1.8rem);
   margin-left: 30px; /* ロゴテキストとの間隔 */
@@ -248,7 +248,7 @@ header {
   width: 65%;
   height: 0.8em;
 
-  background: rgba(169,169,169,0.7);
+  background: rgba(120,120,120,0.7);
 
   border-radius: 0 15px 15px 0;
   z-index: -1;
@@ -833,6 +833,7 @@ footer {
     "Hiragino Mincho ProN",
     "Yu Mincho",
     serif;
+  font-weight: bold;
   font-size: 1em;
   color: #9F987D;
   margin: 0;
@@ -851,7 +852,7 @@ footer .zip {
 }
 
 .footer-address a {
-  color: #aaa;
+  color: #9F987D;
   text-decoration: none;
 }
 
