--- a/index.html
+++ b/index.html
@@ -204,27 +204,6 @@ header {
 }
 
 /* ===============================
-   スライダー上キャッチコピー
-=============================== */
-.slider-catch-out {
-  max-width: 920px;
-  margin: 20px auto 10px;
-  padding: 0 10px;
-
-  text-align: center;
-  color: #fff;
-  line-height: 1.6;
-
-  font-size: clamp(1rem, 2vw, 1.4rem);
-  white-space: nowrap;
-  font-family:
-  "Noto Serif JP",
-  "Hiragino Mincho ProN",
-  "Yu Mincho",
-  serif;
-}
-  
-/* ===============================
    PC用タイトル
 =============================== */
 .pc-title {
@@ -1042,9 +1021,9 @@ main {
  </header>
 <main>
 
-<p class="slider-catch-out pc-only">
-  ノワールでは 専門的な視点から お子様の特性に合わせた療育を行っています。
-</p>
+<div class="slide">
+  <img src="お子様の特性に合わせた療育を行っています.png" alt="">
+</div>
 
 <!-- ===== PC用スライダー ===== -->
 <div class="slider-section pc-only">
