--- a/index.html
+++ b/index.html
@@ -244,6 +244,16 @@ header {
     width: 82%;
   }
 }
+
+/* =================================================
+   キャッチコピー
+================================================= */  
+.slide img {
+  width: 80%;
+  height: auto;
+  margin: 0 auto;
+  display: block;
+}
   
 /* =================================================
    スライダー
