--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@ header {
 /* =================================================
    キャッチコピー
 ================================================= */  
-.slide img {
-  width: 60%;
-  height: auto;
+.catch-slide img {
+  width: 70%;
+  max-width: 900px;
   margin: 0 auto;
   display: block;
 }
@@ -1031,7 +1031,7 @@ main {
  </header>
 <main>
 
-<div class="slide">
+<div class="catch-slide">
   <img src="お子様の特性に合わせた療育を行っています.png" alt="">
 </div>
 
