--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@ header {
    キャッチコピー
 ================================================= */  
 .catch-slide img {
-  width: 70%;
+  width: 80%;
   max-width: 900px;
-  margin: 0 auto;
+  margin: 10px auto -10px auto;
   display: block;
 }
   
