--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@ header {
 ================================================= */  
 .catch-slide img {
   width: 100%;
-  max-width: 960px;
-  margin: 5px auto -20px auto;
+  max-width: 980px;
+  margin: 0 auto -30px auto;
   display: block;
 }
   
