--- a/index.html
+++ b/index.html
@@ -869,9 +869,10 @@ footer .zip {
 
 /* コピーライト */
 .footer-copy {
-  font-size: 1em;
+  font-size: 0.8em;
   color: #9F987D;
   line-height: 1.6;
+  padding-top: 10px;
 }
 
 /* ================= フッターリンク ================= */
