--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,7 @@ main {
 
   <!-- コピーライト -->
   <div class="footer-bottom">
-    <div class="footer-copy">© 2026 合同会社ノワール</div>
+    <div class="footer-copy">© 2026 合同会社ノワール All Rights Reserved.</div>
   </div>
 </footer>
 
