--- a/index.html
+++ b/index.html
@@ -133,54 +133,50 @@ header {
 /* ================= スマホ ================= */
 @media (max-width: 480px) {
   header {
-    padding: 12px 0;       /* 左右は header-inner に任せる */
-    height: auto;          /* 高さは自動で調整 */
+    padding: 12px 16px;
+    height: auto;
   }
 
   /* ヘッダー内全体 */
   .header-inner {
-    padding: 0 16px;       
     display: flex;
-    flex-direction: column; /* 縦並びに変更 */
     align-items: center;
+    justify-content: space-between;
+    position: relative;
+  }
+
+  /* 左側：テキスト2行 */
+  .header-left {
+    display: flex;
+    flex-direction: column; /* 2行にする */
     justify-content: center;
-    position: relative;     /* 中央タイトルの絶対位置解除用 */
+    line-height: 1.2;
   }
 
-  /* ロゴ＋補足文 */
+  .header-left .subtitle {
+    font-size: 0.9rem;
+  }
+
+  .header-left .title {
+    font-size: 1.1rem;
+    font-weight: bold;
+  }
+
+  /* 中央右：ロゴ */
   .logo {
-    display: flex;
-    align-items: center;
-    flex-direction: row;    /* 画像と文字は横並び */
-    gap: 6px;
-  }
-
-  /* ロゴ画像 */
-  .logo-img {
     height: 48px;
     width: auto;
+    margin-left: 8px;
   }
 
-  /* 中央タイトル */
-  .header-center {
-    position: static;       /* 絶対位置を解除して自然に下に配置 */
-    transform: none;
-    margin-top: 4px;        /* 上の文字との間隔 */
-    font-size: 1.1rem;
-    text-align: center;
-    white-space: normal;    /* 折り返し可能に */
-    pointer-events: auto;   /* タップ可能 */
-  }
-
-  /* ☰ ボタン */
+  /* 一番右：ハンバーガーメニュー */
   .menu-toggle {
     display: block;
     font-size: 26px;
     background: none;
     border: none;
-    color: #fff;
+    color: #000; /* 必要に応じて色調整 */
     cursor: pointer;
-    margin-top: 6px;        /* ロゴ下に少し余白 */
   }
 
   /* メニュー */
