--- a/index.html
+++ b/index.html
@@ -257,6 +257,13 @@ header {
   margin: 0 auto -30px auto;
   display: block;
 }
+
+@media (max-width: 480px) {
+  .catch-slide {
+    display: block;      /* 表示する */
+    margin: 12px auto;   /* 上下マージンで調整 */
+    width: 90%;          /* 必要に応じてサイズ調整 */
+  }
   
 /* =================================================
    スライダー
