--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@ header {
 @media (max-width: 480px) {
   .catch-slide {
     display: block;      /* 表示する */
-    margin: 12px auto;   /* 上下マージンで調整 */
-    width: 90%;          /* 必要に応じてサイズ調整 */
+    margin: 5px auto 20px auto;   /* 上下マージンで調整 */
+    width: 100%;          /* 必要に応じてサイズ調整 */
   }
   
 /* =================================================
