--- a/index.html
+++ b/index.html
@@ -50,41 +50,24 @@ body {
 /* =================================================
    ヘッダー
 ================================================= */
-header {
-  background-color: rgba(120,120,120,0.6);
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  height: 120px;
-  width: 100%;
-}
-
 .header-inner {
- max-width: 1100px;
+  max-width: 1100px;
   margin: 0 auto;
-  padding: 20px 5px; /* ← 上下 右左 */
+  padding: 20px 5px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between; /* 左右に分ける */
+  gap: 20px;
 }
 
-.logo {
+/* 左側テキスト */
+.header-left {
   display: flex;
-  align-items: center;
-  gap: 30px; /* ロゴとテキスト間 */
+  flex-direction: column;
+  gap: 4px;
 }
 
-.logo-img {
-  max-height: 80px;
-  width: auto;
-}
-
-.logo-text {
-  color: #fff;
-  font-size: clamp(0.9rem, 2vw, 1.2rem);
-  white-space: nowrap;
-}
-
+/* 中央タイトル */
 .header-center {
   font-weight: bold;
   color: #675340;
@@ -92,35 +75,31 @@ header {
   text-shadow: 0 4px 8px rgba(255,255,255,1);
   white-space: nowrap;
   font-size: clamp(1.1rem, 3vw, 1.8rem);
-  margin-left: 30px; /* ロゴテキストとの間隔 */
-  margin-right: 65px;
 }
 
+/* ロゴ画像 */
+.logo-img {
+  max-height: 80px;
+  width: auto;
+}
+
+/* メニュー */
 .menu {
   display: flex;
   gap: 20px;
-  margin-left: auto;
+  margin-left: auto; /* ハンバーガー右寄せ */
 }
-  
+
 .menu a {
   color: #fff;
   text-decoration: none;
   font-size: clamp(0.7rem, 2vw, 1rem);
   white-space: nowrap;
-}  
-
-.menu a:hover {
-  opacity: 0.7;
 }
 
-/* ハンバーガーボタン（PC非表示） */
+/* ハンバーガーメニュー（PC非表示） */
 .menu-toggle {
   display: none;
-  font-size: 26px;
-  background: none;
-  border: none;
-  color: #fff;
-  cursor: pointer;
 }
 
 /* ================= タブレット以下 ================= */
@@ -132,55 +111,30 @@ header {
 
 /* ================= スマホ ================= */
 @media (max-width: 480px) {
-  header {
-    height: auto;
-    padding: 12px 0;
-  }
-
   .header-inner {
-    display: flex;
-    align-items: center;
+    flex-direction: row;
     justify-content: space-between;
-    padding: 0 16px;
-    position: relative;
+    align-items: center;
   }
 
-  /* 左側：2行テキスト */
-  .logo {
-    display: flex;
+  .header-left {
     flex-direction: column;
-    justify-content: center;
+    align-items: flex-start;
   }
 
-  .logo-text {
-    font-size: 0.95rem;
-    line-height: 1.2;
-  }
-
-  .header-center {
-    font-size: 1.1rem;
-    line-height: 1.2;
-  }
-
-  /* 右側：ロゴ画像 */
   .logo-img {
     height: 48px;
-    width: auto;
-    margin-left: 8px; /* 少し間隔 */
   }
 
-  /* ハンバーガーメニューは右端 */
   .menu-toggle {
     display: block;
     font-size: 26px;
     background: none;
     border: none;
-    color: #000; /* 必要に応じて色変更 */
+    color: #000;
     cursor: pointer;
-    margin-left: 8px;
   }
 
-  /* メニュー */
   .menu {
     position: absolute;
     top: 100%;
@@ -191,18 +145,15 @@ header {
     padding: 14px 16px;
     display: none;
     z-index: 999;
+    flex-direction: column;
   }
 
   .menu.show {
-    display: block;
+    display: flex;
   }
 
   .menu a {
-    display: block;
     padding: 10px 0;
-    font-size: 1em;
-    color: #fff;
-    text-decoration: none;
   }
 }
   
@@ -261,8 +212,8 @@ header {
 @media (max-width: 480px) {
   .catch-slide {
     display: block;      /* 表示する */
-    margin: 5px auto 20px auto;   /* 上下マージンで調整 */
-    width: 100%;          /* 必要に応じてサイズ調整 */
+    margin: 0 auto 20px auto;   /* 上下マージンで調整 */
+    width: 120%;          /* 必要に応じてサイズ調整 */
   }
   
 /* =================================================
@@ -1012,34 +963,29 @@ main {
 <div class="background-image"></div>
 
 <header>
- <div class="header-inner">
-
- <div class="logo">
-   <img src="logo.png" alt="" class="logo-img">
-   <span class="logo-text">放課後等デイサービス・児童発達支援</span>
- </div>
-
-    <div class="header-center">
-      発達支援ノワール
+  <div class="header-inner">
+    <!-- 左側：テキスト -->
+    <div class="header-left">
+      <span class="logo-text">放課後等デイサービス・児童発達支援</span>
+      <div class="header-center">発達支援ノワール</div>
     </div>
 
-    <!-- スマホ用メニューボタン -->
+    <!-- 右側：ロゴ -->
+    <img src="logo.png" alt="" class="logo-img">
+
+    <!-- 右端：ハンバーガーメニュー -->
     <button class="menu-toggle" id="menu-toggle">☰</button>
 
-    <!-- メニューは1つだけ！ -->
+    <!-- メニュー -->
     <nav class="menu" id="menu">
-  <a href="#flow">ご利用の流れ</a>
-  <a href="#price">ご利用料金</a>
-  <a href="#access">アクセス</a>
-  <a href="#" id="contact-link">お問い合わせ</a>
-  <!--2025年度は非表示 <a href="#pdf">自己評価</a> -->
-  <a href="https://www.instagram.com/noir_niigata/" target="_blank" class="insta-link">
-    Instagram
-  </a>
+      <a href="#flow">ご利用の流れ</a>
+      <a href="#price">ご利用料金</a>
+      <a href="#access">アクセス</a>
+      <a href="#" id="contact-link">お問い合わせ</a>
+      <a href="https://www.instagram.com/noir_niigata/" target="_blank" class="insta-link">Instagram</a>
     </nav>
-
   </div>
- </header>
+</header>
   
 <main>
 
