--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@ main {
  </header>
   
 <main>
-
+  
 <div class="catch-slide">
   <img src="お子様の特性に合わせた療育を行っています.png" alt="">
 </div>
@@ -1090,6 +1090,7 @@ main {
         <img src="ご利用の流れ.png" alt="ご利用開始までの流れ">
       </div>
     </div>
+   </div>
     
    <div class="toggle-container料金">
   <h2 class="pc-title" id="price">ご利用料金について</h2>
