--- a/index.html
+++ b/index.html
@@ -1103,6 +1103,7 @@ main {
         <img src="料金.png" alt="ご利用料金">
       </div>
     </div>
+  </div>
 
 <h2 class="pc-title" id="access">アクセス</h2>
 <section class="access-section">
