--- a/index.html
+++ b/index.html
@@ -649,7 +649,6 @@ header {
 /* =================================================
    お問い合わせ（フォーム全体）
 ================================================= */
-
 /* フォーム表示エリア */
 .contact-form {
   display: none;              /* 初期は非表示 */
@@ -672,13 +671,11 @@ header {
   border: none;
 }
 
-
 /* =================================================
    お問い合わせ トグルボタン
 ================================================= */
-
 .toggle-button-contact {
-  display: inline-flex;
+  display: block;
   align-items: center;
   justify-content: center;
   gap: 8px;
