--- a/index.html
+++ b/index.html
@@ -946,13 +946,13 @@ footer .zip {
   .footer-address a,
   .footer-tel,
   .footer-mail {
-    margin: 2px 0;
+    margin-top: 2px;
     display: block;
   }
 
   /* コピーライト */
   .footer-copy {
-    font-size: 12px;
+    font-size: 9px;
     margin-top: 2px;
     text-align: center;
   }
@@ -963,7 +963,7 @@ footer .zip {
   }
 
   .footer-links .footer-sep {
-    font-size: 14px;
+    font-size: 10px;
   }
 
   /* 左：お問い合わせ */
