--- a/index.html
+++ b/index.html
@@ -954,6 +954,7 @@ footer .zip {
   /* フッターリンクは左右中央に */
   .footer-links a {
     padding: 0 6px;
+    font-size: 10px;
   }
 
   .footer-links .footer-sep {
